ensure menu button doesnt overlap content

--- a/app/style/index.sass
+++ b/app/style/index.sass
@@ -7,3 +7,6 @@ body, html, .off-canvas-wrap, .inner-wrap
 section.left-small
   border: none
   box-shadow: none
+
+nav
+  margin-bottom: 10px
